--- a/10_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -24,9 +24,15 @@
                                     <i class="fa fa-map-marker"></i> <strong> Địa chỉ:</strong> @commonInfo.Address
                                 </li>
                                 <li>
-                                    <i class="fa fa-phone"></i> <strong> Điện thoại:</strong> <a href="tel:@commonInfo.HotLine">@commonInfo.HotLine</a> 
+                                    <i class="fa fa-phone"></i> <strong> Điện thoại:</strong> <a href="tel:@commonInfo.HotLine">@commonInfo.HotLine</a>
                                 </li>
-                              
+                                <li>
+                                    <i class="fa fa-envelope"></i> <strong> Email:</strong> <a href="mailto:@commonInfo.Email">@commonInfo.Email</a>
+                                </li>
+                                <li>
+                                    <i class="fa fa-facebook"></i><strong> <a href="@commonInfo.FaceBookLink">FaceBook</a></strong>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
