--- a/10_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -24,8 +24,15 @@
         <div class="container">
             <ul>
                 <li><a href="/" title="Trang chủ">Trang chủ</a></li>
-                <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId)" title="">@item.ParentCatName</a></li>
-                <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
+                @if (!string.IsNullOrEmpty(item.ParentCatName))
+                {
+                    <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId)" title="">@item.ParentCatName</a></li>
+                }
+                @if (!string.IsNullOrEmpty(item.CatName))
+                {
+                    <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
+                }
+
                 <li><span>@item.PrName</span></li>
             </ul>
         </div>
@@ -67,61 +74,61 @@
                     <div class="single_product__info col-sm-5">
                         <h2 itemprop="name" class="single_product__title">@item.PrName</h2>
                         <div class="single_product__details">
-                                <div class="details_wrapper">
-                                    <p class="single_product__availability">
-                                        <b>Tình trạng:</b>
-                                        <span id="single_product__availability-template-product" class="notify_success">@(item.IsInstock ? "Còn hàng" : "Hết Hàng")</span>
-                                    </p>
-                                    <p class="single_product__sku">
-                                        <b>SKU:</b>
-                                        <span id="single_product__sku-template-product">@item.Id</span>
-                                    </p>
+                            <div class="details_wrapper">
+                                <p class="single_product__availability">
+                                    <b>Tình trạng:</b>
+                                    <span id="single_product__availability-template-product" class="notify_success">@(item.IsInstock ? "Còn hàng" : "Hết Hàng")</span>
+                                </p>
+                                <p class="single_product__sku">
+                                    <b>SKU:</b>
+                                    <span id="single_product__sku-template-product">@item.Id</span>
+                                </p>
 
-                                    <p class="single_product__collections">
-                                        <b>Collections:</b>
-                                        <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName,item.ParentId)">@item.CatName</a>
+                                <p class="single_product__collections">
+                                    <b>Collections:</b>
+                                    <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName,item.ParentId)">@item.CatName</a>
+                                </p>
+                                @if (item.Warranty > 0)
+                                {
+                                    <p class="single_product__type">
+                                        <b>Bảo hành:</b>
+                                        <span>
+                                            @item.Warranty tháng
+                                        </span>
                                     </p>
-                                    @if (item.Warranty > 0)
-                                    {
-                                        <p class="single_product__type">
-                                            <b>Bảo hành:</b>
-                                            <span>
-                                                @item.Warranty tháng
-                                            </span>
-                                        </p>
-                                    }
-                                    <div class="clearfix"></div>
-                                    <div class="price_and_quantity">
-                                        <p class="single_product__price">
-                                            <span id="single_product__price-template-product">
-                                                @if (item.IsSale)
-                                                {
-                                                    <span class="money">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
-                                                    <span class="money money_sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
-                                                    <span class="money_sale_percent">– @Convert.ToInt32(item.SalePrice/item.Price*100)%</span>
+                                }
+                                <div class="clearfix"></div>
+                                <div class="price_and_quantity">
+                                    <p class="single_product__price">
+                                        <span id="single_product__price-template-product">
+                                            @if (item.IsSale)
+                                            {
+                                                <span class="money">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                <span class="money money_sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                <span class="money_sale_percent">– @Convert.ToInt32(item.SalePrice / item.Price * 100)%</span>
 
-                                                }
-                                                else
-                                                {
-                                                    <span class="money">@(item.Price == 0 ? "Đang cập nhật giá" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                                }
-                                            </span>
-                                        </p>
-                                        <div class="single_product__quantity">
-                                            <label for="single_product__quantity-template-product">Số lượng: </label>
-                                            <div class="quantity_box">
-                                                <span class="quantity_down"><i class="fa fa-minus" aria-hidden="true"></i></span>
-                                                <input id="single_product__quantity-template-product" class="quantity_input" type="text" name="quantity" value="1">
-                                                <span class="quantity_up"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                                            </div>
+                                            }
+                                            else
+                                            {
+                                                <span class="money">@(item.Price == 0 ? "Đang cập nhật giá" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                            }
+                                        </span>
+                                    </p>
+                                    <div class="single_product__quantity">
+                                        <label for="single_product__quantity-template-product">Số lượng: </label>
+                                        <div class="quantity_box">
+                                            <span class="quantity_down"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                            <input id="single_product__quantity-template-product" class="quantity_input" type="text" name="quantity" value="1">
+                                            <span class="quantity_up"><i class="fa fa-plus" aria-hidden="true"></i></span>
                                         </div>
                                     </div>
+                                </div>
 
-                                    <div class="button_block">
-                                        <button type="submit" name="add" class="btn" id="single_product__addtocart">Mua hàng</button>
-                                        <p class="wishlist_section"><a href="http://www.facebook.com/sharer.php?u=@ViewBag.WebsiteUrl" class="wishlist_form"><i class="fa fa-heart" aria-hidden="true"></i> Chia sẻ sản phẩm này</a></p>
-                                    </div>
-                                </div>                            
+                                <div class="button_block">
+                                    <button type="submit" name="add" class="btn" id="single_product__addtocart">Mua hàng</button>
+                                    <p class="wishlist_section"><a href="http://www.facebook.com/sharer.php?u=@ViewBag.WebsiteUrl" class="wishlist_form"><i class="fa fa-heart" aria-hidden="true"></i> Chia sẻ sản phẩm này</a></p>
+                                </div>
+                            </div>
                             <div class="social_sharing_block">
                                 <a target="_blank" href="http://www.facebook.com/sharer.php?u=@ViewBag.WebsiteUrl" title="Share">
                                     <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -167,13 +174,13 @@
                                         <div class="product_item">
                                             <div class="product_img">
                                                 <a class="img_change" href="@Anpero.StringHelpper.GetProductLink(relateItem.PrName,relateItem.Id)">
-                                                    <img class="img__1" src="@relateItem.Images" alt="@relateItem.PrName">                                                    
+                                                    <img class="img__1" src="@relateItem.Images" alt="@relateItem.PrName">
                                                     <span class="product_badge new">new</span>
                                                 </a>
                                             </div>
                                             <div class="product_info">
                                                 <p class="product_name">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(relateItem.PrName,relateItem.Id)">@Anpero.StringHelpper.SubString(40,relateItem.PrName)</a>
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(relateItem.PrName,relateItem.Id)">@Anpero.StringHelpper.SubString(40, relateItem.PrName)</a>
                                                 </p>
                                                 <p class="product_desc product_desc__short">
                                                     @relateItem.ShortDesc
@@ -187,12 +194,12 @@
                                                     </p>
                                                     <p class="product_color"></p>
                                                 </div>
-                                                
+
                                             </div>
                                             <div class="clearfix"></div>
                                         </div>
                                     </div>
-                                 
+
                                 }
                             }
                         }
@@ -231,7 +238,7 @@
                 Cart.quantity = $("#single_product__quantity-template-product").val();
                 Cart.addProduct(@item.Id, '@Convert.ToInt32(item.SalePrice)','@item.Images', escape('@item.PrName'));
             });
-            
+
             function resizeVideo() {
                 var contentW = $('#product_tabs_description').width();
                 var iframe = $('#product_tabs_description iframe');
@@ -239,6 +246,23 @@
                 iframe.css('width', iframeW);
                 var iframeH = contentW / 16 * 9;
                 iframe.css('height', iframeH);
+            }
+        </script>
+        @{
+            List<string> images = new List<string>();
+            images.Add(item.Images);
+            images.AddRange(item.ImagesSlide);
+            images = images.Select(x => "\"" + x + "\"").ToList();
+            var imagesText = string.Join(",", images);
+        }
+        <script type="application/ld+json">
+            {
+            "@@context":"http://schema.org/",
+            "@@type":"Product",
+            "name":"@item.PrName",
+            "image":[@Html.Raw(imagesText)],
+            "description":"@item.ShortDesc",
+            "sku": "@item.Id"
             }
         </script>
     }
