--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -13,13 +13,18 @@
     <title>@ViewBag.Title</title>
 
     @Styles.Render("~/Content/css")
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+    <link rel="dns-prefetch" href="https://www.facebook.com/">
+    <link rel="dns-prefetch" href="https://v2.zopim.com/">
+    <link rel="dns-prefetch" href="https://www.google-analytics.com/">
 
-    <link rel="icon" href="@commonInfo.Logo" type="image/x-icon">
-    <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
+    <link rel="icon" href="@(string.IsNullOrEmpty(commonInfo.Favicon)?commonInfo.Logo:commonInfo.Favicon)" type="image/x-icon">
+    <link rel="shortcut icon" href="@(string.IsNullOrEmpty(commonInfo.Favicon)?commonInfo.Logo:commonInfo.Favicon)" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Refresh" content="3600" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="robots" content="*">
+    
     <!-- Apple iOS and Android stuff -->
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -28,8 +33,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     @RenderSection("health", required: false)
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
-    <link rel="dns-prefetch" href="https://www.facebook.com/">
+
     <link href='/static/css' rel='stylesheet' type='text/css'>
     <script src="/Scripts/jquery-1-10.js"></script>
     <script>
@@ -46,13 +50,6 @@
         </div>
 
         <script>
-            preloaderBg = document.getElementById('page_preloader__bg');
-            preloaderImg = document.getElementById('page_preloader__img');
-
-            window.addEventListener('load', function () {
-                preloaderBg.classList.add("off");
-                preloaderImg.classList.add("off");
-            });
 
         </script>
         @Html.Partial("_partial/_MainHeader_1")
@@ -73,8 +70,8 @@
         <link href="/assets/responsive.css" rel="stylesheet" type="text/css" media="all" />
         <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">S
     </noscript>
-    <script  defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/features.js"  defer="defer" crossorigin="anonymous"></script>    
+    <script defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
+    <script src="/assets/js/features.js" defer="defer" crossorigin="anonymous"></script>
     <script id="sections-script" data-sections="index-slideshow-full-width,index-banners-countdown-custom,index-logo-list,header,footer" defer="defer" src="/assets/shop.js"></script>
     <h1 id="heading1" style="display:none;">
         @commonInfo.Desc
@@ -87,10 +84,39 @@
     @Html.Partial("_partial/_MainFooter_1")
     @RenderSection("scripts", required: false)
     <script type="text/javascript">
+        $(document).ready(function () {
+
+
+
+        });
         jQuery(window).load(function () {
+            preloaderBg = document.getElementById('page_preloader__bg');
+            preloaderImg = document.getElementById('page_preloader__img');
+            preloaderBg.classList.add("off");
+            preloaderImg.classList.add("off");
             Cart.bindCart();
         });
     </script>
+    <script type="application/ld+json">
+        {
+        "@@context": "https://schema.org",
+        "@@type": "WebSite",
+        "url": "@Url.Content("~")",
+        "potentialAction": {
+        "@@type": "SearchAction",
+        "target": "@(Url.Content("~").TrimEnd('/') + Url.RouteUrl("search") + "?keyword={keyword}")",
+        "query-input": "required name=keyword"
+        }
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+        "@@context": "https://schema.org",
+        "@@type": "Organization",
+        "url": "@Url.Content("~").TrimEnd('/')",
+        "logo": "@commonInfo.Logo"
+        }
 
+    </script>
 </body>
 </html>
