--- a/10_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -82,40 +82,27 @@
                                     </ul>
                                 </li>
 
-                                <li class="level_1__item level_2__small">
+                                <li class="level_1__item level_2__links">
                                     <a class="level_1__link " href="/search">
                                         Danh mục sản phẩm
                                         <i class="level_1__trigger megamenu_trigger" data-submenu="menu_3"></i>
                                     </a>
                                     <ul class="level_2" id="menu_3">
-                                        <li>
-                                            <div>
-                                                <ul class="level_3">
-                                                    @foreach (var item in commonInfo.ProductCategoryList)
-                                                    {
-                                                        <li class="level_3__item">
-                                                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
-                                                                @item.Name
-                                                            </a>
+                                        <li class="container">
+                                            @foreach (var item in commonInfo.ProductCategoryList)
+                                            {
+                                                <div class="megamenu_col__item align_center">
+                                                    <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
+                                                        @if (!string.IsNullOrEmpty(item.Images))
+                                                        {
+                                                            <img src="@item.Images" alt="@item.Name">
 
-                                                            @*<div class="megamenu_col__item align_center">
-                                                                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
-                                                                    @if (!string.IsNullOrEmpty(item.Images))
-                                                                    {
-                                                                        <img src="@item.Images" alt="@item.Name">
-
-                                                                    }
-                                                                    <h4>@item.Name</h4>
-                                                                </a>
-                                                            </div>*@
-                                                        </li>
-                                                    }
-                                                </ul>
-
-                                            </div>
+                                                        }
+                                                        <h4>@item.Name</h4>
+                                                    </a>
+                                                </div>
+                                            }
                                         </li>
-                                       
-
                                     </ul>
                                 </li>
                                 <li class="level_1__item level_2__small">
@@ -128,11 +115,11 @@
                                         <ul class="level_2">
                                             <li>
                                                 <div>
-                                                    <ul class="level_3">
+                                                    <ul class="level_3">                                                     
                                                         @foreach (var item in commonInfo.ProductGroupList)
                                                         {
                                                             <li class="level_3__item ">
-
+                                                                
                                                                 <a class="level_3__link" href="/search?brands=@item.Id">
                                                                     @item.Name
                                                                 </a>
@@ -143,8 +130,7 @@
                                                 </div>
                                             </li>
                                         </ul>
-
-
+                                    
                                     }
 
                                 </li>
