--- a/10_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -24,180 +24,189 @@
 }
 <div class="page_container">
     <div class="main_content ">
-        <div class="shopify-section index-section">
-            <div class="section section_homepage section_slideshow_full_width section_slideshow__large swiper-container" data-autoplay="true" data-speed="3000">
-                <div class="owl-carousel-1">
-                    @if (ViewData["Slide"] != null)
-                    {
-                        Ads[] slide = (Ads[])ViewData["Slide"];
-                        foreach (var item in slide)
+        @if (!Request.Browser.IsMobileDevice)
+        {
+            <div class="shopify-section index-section hidden-md">
+                <div class="section section_homepage section_slideshow_full_width section_slideshow__large swiper-container" data-autoplay="true" data-speed="3000">
+                    <div class="owl-carousel-1">
+                        @if (ViewData["Slide"] != null)
                         {
-                            <div class="item">                        
-                                    <div class="img_placeholder__wrap img_placeholder__large" style="background-image: url(@item.ImagesUrl);"></div>                        
+                            Ads[] slide = (Ads[])ViewData["Slide"];
+                            foreach (var item in slide)
+                            {
+                                <div class="item">
+                                    <div class="img_placeholder__wrap img_placeholder__large" style="background-image: url(@item.ImagesUrl);"></div>
                                     <div class="slide_caption container">
                                         <div class="slide_caption_text"></div>
-                                    </div>                        
-                            </div>
-                        }                      
-
-                    }
-
-                </div>
-            </div>
-        </div>
-        <div class="shopify-section section section_homepage section_featured-products">
-            <div class="container">
-                <h2 class="section_heading">Sản phẩm</h2>
-                <div class="row product_listing__main">
-                    @if (commonInfo.ProductCategoryList != null)
-                    {
-                        foreach (var item in commonInfo.ProductCategoryList)
-                        {
-                            <div class="col-xs-12 col-md-4 item_4_1 item_2_1">
-                                <div class="product_item">
-                                    <div class="product_img">
-                                        <a class="img_change" href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
-                                            <img class="img__1" src="@item.Images" alt="@item.Name">
-                                            <img class="img__2" src="@item.Images" alt="@item.Name">
-                                        </a>
-                                    </div>
-                                    <div class="product_info">
-                                        <p class="product_name">
-                                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">@item.Name</a>
-                                        </p>
-                                        <p class="product_desc product_desc__short">
-                                            @item.Description
-                                        </p>
-                                        <p class="product_desc product_desc__long">
-                                            @item.Description
-                                        </p>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                        }
-                    }
-
-                </div>
-            </div>
-
-        </div>
-        <div class="shopify-section section section_divider">
-            <div class="divider_item container" style="padding-top: 50px;"></div>
-            <div class="divider_item tablet_show container" style="padding-top: 50px;"></div>
-        </div>
-        <div class="shopify-section section section_homepage section_two_banners">
-            <div class="container">
-                <div class="row about-news ads1">
-
-                    @if (ViewData["ads1"] != null)
-                    {
-                        Ads[] ads1 = (Ads[])ViewData["ads1"];
-                        if (ads1.Count() > 0)
-                        {
-                            <div class="col-sm-6 ads1-0">
-
-                                <h2 class="title">Về chúng tôi</h2>
-                                <div class="">
-                                    <img src="@ads1[0].ImagesUrl" style="max-width:100%;" />
-                                </div>
-                                <div class="banner_left__caption position_left">
-                                    <div class="caption_text">
-                                        @Html.Raw(ads1[0].Description)
-                                    </div>
-                                </div>
-
-                            </div>
-                            if (ads1.Count() > 1)
-                            {
-                                <div class="col-sm-6 ads1-1" id="content-video">
-                                    <h2 class="title">Video</h2>
-                                    <div class="caption_text" data-close-btn-text="ads1">
-                                        @Html.Raw(ads1[1].Description)
                                     </div>
                                 </div>
                             }
+
                         }
-                    }
+
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="shopify-section  section section_divider">
-            <div class="divider_item container" style="padding-top: 22px;"></div>
-            <div class="divider_item tablet_show container" style="padding-top: 22px;"></div>
-        </div>
-        <div class="shopify-section section section_homepage section_banners_countdown_custom">
-            <div class="row">
-                @if (ViewData["ads2"] != null)
+        }
+
+    </div>
+    <div class="shopify-section section section_homepage section_featured-products">
+        <div class="container">
+            <h2 class="section_heading">Sản phẩm</h2>
+            <div class="row product_listing__main">
+                @if (commonInfo.ProductCategoryList != null)
                 {
-                    Ads[] ads2 = (Ads[])ViewData["ads2"];
-                    if (ads2.Count() > 0)
+                    foreach (var item in commonInfo.ProductCategoryList)
                     {
-                        <div class="col-xs-12 timer_item ads2-0">
-                            <div class="banner_wrap">
-                                <div class="timer_img img_placeholder__wrap" style="background-image: url(@ads2[0].ImagesUrl);">
+                        <div class="col-xs-12 col-md-4 item_4_1 item_2_1">
+                            <div class="product_item">
+                                <div class="product_img">
+                                    <a class="img_change" href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
+                                        <img class="img__1" src="@item.Images" alt="@item.Name">
+                                        @*<img class="img__2" src="@item.Images" alt="@item.Name">*@
+                                    </a>
                                 </div>
-                                <div class="banner_caption align_center text_align_center ">
-                                    <div class="banner_text">
-                                        @ads2[0].Description
-                                    </div>
+                                <div class="product_info">
+                                    <p class="product_name">
+                                        <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">@item.Name</a>
+                                    </p>
+                                    <p class="product_desc product_desc__short">
+                                        @item.Description
+                                    </p>
+                                    <p class="product_desc product_desc__long">
+                                        @item.Description
+                                    </p>
                                 </div>
+                                <div class="clearfix"></div>
                             </div>
                         </div>
-                        if (ads2.Count() > 1)
+                    }
+                }
+
+            </div>
+        </div>
+
+    </div>
+    <div class="shopify-section section section_divider">
+        <div class="divider_item container" style="padding-top: 50px;"></div>
+        <div class="divider_item tablet_show container" style="padding-top: 50px;"></div>
+    </div>
+    <div class="shopify-section section section_homepage section_two_banners">
+        <div class="container">
+            <div class="row about-news ads1">
+
+                @if (ViewData["ads1"] != null)
+                {
+                    Ads[] ads1 = (Ads[])ViewData["ads1"];
+                    if (ads1.Count() > 0)
+                    {
+                        <div class="col-sm-6 ads1-0">
+
+                            <h2 class="title">Về chúng tôi</h2>
+                            <div class="">
+                                <img src="@ads1[0].ImagesUrl" style="max-width:100%;" />
+                            </div>
+                            <div class="banner_left__caption position_left">
+                                <div class="caption_text">
+                                    @Html.Raw(ads1[0].Description)
+                                </div>
+                            </div>
+
+                        </div>
+                        if (ads1.Count() > 1)
                         {
-                            <div class="col-xs-12 banner_item ads2-1">
-                                <div class="banner_wrap">
-                                    <div class="banner_img img_placeholder__wrap" style="background-image: url(@ads2[1].ImagesUrl);"></div>
-                                    <div class="banner_caption align_center text_align_center  ">
-                                        <div class="banner_text">
-                                            @Html.Raw(ads2[1].Description)
-                                        </div>
-                                    </div>
+                            <div class="col-sm-6 ads1-1" id="content-video">
+                                <h2 class="title">Video</h2>
+                                <div class="caption_text" data-close-btn-text="ads1">
+                                    @Html.Raw(ads1[1].Description)
                                 </div>
                             </div>
                         }
                     }
                 }
+            </div>
+        </div>
+    </div>
+    <div class="shopify-section  section section_divider">
+        <div class="divider_item container" style="padding-top: 22px;"></div>
+        <div class="divider_item tablet_show container" style="padding-top: 22px;"></div>
+    </div>
+
+    @if (ViewData["ads2"] != null)
+    {
+        Ads[] ads2 = (Ads[])ViewData["ads2"];
+        if (ads2.Count() > 0)
+        {
+            <div class="shopify-section section section_homepage section_banners_countdown_custom">
+                <div class="row">
+                    <div class="col-xs-12 timer_item ads2-0">
+                        <div class="banner_wrap">
+                            <div class="timer_img img_placeholder__wrap" style="background-image: url(@ads2[0].ImagesUrl);">
+                            </div>
+                            <div class="banner_caption align_center text_align_center ">
+                                <div class="banner_text">
+                                    @ads2[0].Description
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    @if (ads2.Count() > 1)
+                    {
+                        <div class="col-xs-12 banner_item ads2-1">
+                            <div class="banner_wrap">
+                                <div class="banner_img img_placeholder__wrap" style="background-image: url(@ads2[1].ImagesUrl);"></div>
+                                <div class="banner_caption align_center text_align_center  ">
+                                    <div class="banner_text">
+                                        @Html.Raw(ads2[1].Description)
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        }
+    }
 
 
+
+
+    <div class="shopify-section section section_homepage section_logo-list">
+        <div class="container">
+            <h2 class="section_heading ads3">Công trình tiêu biểu</h2>
+            <div class="row">
+
+                <div class="owl-carousel owl-theme owl-carousel-6">
+                    @if (ViewData["ads3"] != null)
+                    {
+                        Ads[] ads3 = (Ads[])ViewData["ads3"];
+                        foreach (var item in ads3)
+                        {
+                            <div class="item">
+                                <div class="logo_item item_image">
+                                    <a href="@item.ClickUrl" class="logo-bar__link">
+                                        <img src="@item.ImagesUrl" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
 
             </div>
         </div>
-        <div class="shopify-section section section_homepage section_logo-list">
-            <div class="container">
-                <h2 class="section_heading ads3">Công trình tiêu biểu</h2>
-                <div class="row">
-                    
-                        <div class="owl-carousel owl-theme owl-carousel-6">
-                            @if (ViewData["ads3"] != null)
-                            {
-                                Ads[] ads3 = (Ads[])ViewData["ads3"];
-                                foreach (var item in ads3)
-                                {
-                                    <div class="item">
-                                        <div class="logo_item item_image">
-                                            <a href="@item.ClickUrl" class="logo-bar__link">
-                                                <img src="@item.ImagesUrl" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                }
-                            }
-                        </div>
-                    
-                </div>
-            </div>
-        </div><!-- END content_for_index -->
-    </div>
+    </div><!-- END content_for_index -->
+</div>
 </div>
 <style>
     .product_name a {
         font-weight: bold;
     }
-    .owl-carousel .owl-item img{
-  padding: 10px;
-}
+
+    .owl-carousel .owl-item img {
+        padding: 10px;
+    }
+
     .about-news .title {
         margin-bottom: 5px;
         line-height: 38px;
@@ -229,30 +238,32 @@
     <script src="/assets/owl.carousel.min.js"></script>
     <script>
         $(document).ready(function () {
-    
+
             $('.owl-carousel-6').owlCarousel({
                 stagePadding: 10,
-                margin:10,
+                margin: 10,
                 itemsCustom: [
                     [320, 1],
                     [480, 2],
                     [768, 4],
                     [1024, 5],
                     [1200, 5]
-                ],                
+                ],
                 autoPlay: true
             });
-            
-            $('.owl-carousel-1').owlCarousel({                                
+            if ($('.owl-carousel-1')) {
+                $('.owl-carousel-1').owlCarousel({
                 itemsCustom: [
                     [320, 1],
                     [480, 1],
                     [768, 1],
                     [1024, 1],
                     [1200, 1]
-                ],                
+                ],
                 autoPlay: true
             });
+            }
+            
             resizeVideo();
         });
         function resizeVideo() {
