--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -51,14 +51,15 @@
         <script>
             preloaderBg = document.getElementById('page_preloader__bg');
             preloaderImg = document.getElementById('page_preloader__img');
-            $(window).load(function () {
+            $(document).ready(function () {
                 preloaderBg.classList.add("off");
                 preloaderImg.classList.add("off");
             });
-            //window.addEventListener('load', function () {
+            //$(window).load(function () {
             //    preloaderBg.classList.add("off");
             //    preloaderImg.classList.add("off");
             //});
+           
 
         </script>
         @Html.Partial("_partial/_MainHeader_1")
@@ -70,7 +71,8 @@
         <a id="back_top" href="#">
             <i class="fa fa-angle-up" aria-hidden="true"></i>
         </a>
-
+        
+     
     </div>
 
     <link href="/assets/animate.css" rel="stylesheet" />
@@ -80,7 +82,7 @@
         <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">S
     </noscript>
     @*<script  defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>*@
-    @*<script src="/assets/js/features.js"  defer="defer" crossorigin="anonymous"></script>*@    
+    @*<script src="/assets/js/features.js"  defer="defer" crossorigin="anonymous"></script>*@
     <script id="sections-script" data-sections="index-slideshow-full-width,index-banners-countdown-custom,index-logo-list,header,footer" defer="defer" src="/assets/shop.js"></script>
     <h1 id="heading1" style="display:none;">
         @commonInfo.Desc
@@ -92,6 +94,11 @@
 
     @Html.Partial("_partial/_MainFooter_1")
     @RenderSection("scripts", required: false)
+    <style type="text/css">
+        .section_slideshow_full_width .img_placeholder__large {
+            padding: 35.875% 0 0 0;
+        }
+    </style>
     <script type="text/javascript">
         jQuery(window).load(function () {
             Cart.bindCart();
