--- a/10_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -11,8 +11,9 @@
     }
     string currentUrl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
 }
-<div id="shopify-section-footer" class="shopify-section">
-    <footer style="background: #f6f6f6;">
+<div class="shopify-section">
+    <footer id="footer">
+
         <div class="footer_row__1">
             <div class="container">
                 <div class="row footer_main">
@@ -29,11 +30,35 @@
                                 <li>
                                     <i class="fa fa-envelope"></i> <strong> Email:</strong> <a href="mailto:@commonInfo.Email">@commonInfo.Email</a>
                                 </li>
-                                <li>
-                                    <i class="fa fa-facebook"></i><strong> <a href="@commonInfo.FaceBookLink">FaceBook</a></strong>
-                                </li>
-
+                                @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                {
+                                    <li>
+                                        <strong><i class="fa fa-skype"></i> Skype: <a href="skype:@commonInfo.Skype?chat">@commonInfo.Skype</a></strong>
+                                    </li>
+                                }
                             </ul>
+                            <div class="address-box">
+
+
+                                @{
+
+                                    string thisUrl = Request.Url.AbsoluteUri;
+                                    <h3 class="introduce-title" style="margin:10px 0 10px 0;">Chia sẻ với bạn bè</h3>
+                                    <div class="social-link">
+                                        @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                        {
+                                            <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                        }
+                                        @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                        {
+                                            <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                        }
+                                        <a href="//plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
+                                        <a href="//pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest"></i></a>
+                                        <a href="//www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+                                    </div>
+                                }
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-3 footer_block ">
@@ -91,19 +116,101 @@
                 </div>
             </div>
         </div>
-        <div class="footer_row__2  bottom_inverted" style="background: #acdbb4;">
-            <div class="container">
-                <div class="footer_wrap_1">
-                    <div class="footer_wrap_2 footer_center">
-                        Copyrights © 2019 @commonInfo.Name. <a target="_blank" href="https://anpero.com">Powered by Anpero</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </footer>
+    <div id="footer-menu-box">
+        <div class="col-sm-12">
+            <ul class="footer-menu-list">
+                <li><a title="about" href="/about">Về chúng tôi</a></li>
+                <li><a href="/home/contact">Liên hệ</a></li>
+
+            </ul>
+        </div>
+        <div class="col-sm-12">
+            <ul class="footer-menu-list">
+                <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
+                <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
+                <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
+                <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
+                <li><a href="/blog">Tin tức</a></li>
+                <li><a href="/home/contact">Liên hệ</a></li>
+
+            </ul>
+        </div>
+        <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpero"> Anpero.com</a></p>
+    </div>
     <style>
+     
         #shopify-section-footer footer {
             padding-top: 0px;
+        }
+
+        #footer-menu-box {
+            background: #231f20;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            color: white;
+        }
+
+        .footer-menu-list {
+            list-style: none;
+            text-align: center;
+            margin-bottom: 5px;
+        }
+
+            .footer-menu-list li {
+                display: inline;
+                padding: 0 7px 0 5px;
+                border-right: 1px solid #70e280;
+            }
+
+        #footer-menu-box a {
+            color: white;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        #footer {
+            border-bottom: 3px solid #e37f29;
+        }
+
+        #footer {
+            background: url(/assets/images/bg1.png);
+        }
+
+        .address-box {
+            border-top: 1px solid #d0cccc;
+            margin-top: 11px;
+        }
+
+        .social-link .fa-facebook {
+            background: #415a99;
+        }
+
+        .social-link .fa-google-plus {
+            background: #da4735;
+        }
+
+        .social-link .fa-pinterest {
+            background: #cb222a;
+        }
+
+        .social-link .fa {
+            width: 30px;
+            height: 30px;
+            color: #fff;
+            line-height: 30px;
+            text-align: center;
+        }
+
+        .social-link .fa-twitter {
+            background: #00caff;
+        }
+        .product_listing__main .product_img .img_change{
+            max-height:375px;
         }
     </style>
 </div>
